@@ -9,6 +9,10 @@ Change log
 
 0.9u:
 
+    - Added support to the SimpleArrangementEngine for modifying the ActivityVectors of the generated ActivityMatrix using the
+      "modifyActivityVector" tag. Currently, the operators "set", "clear" and "flip" are supported on any chord section range of an
+      ActivityVector.
+
     - Changed the DrumSequenceEngine implementation to allow referring to ActivityVectors in conditional patterns'/LFO's conditions even if
       they are not provided in the ActivityVector list of the DrumSequenceEngine. This removes the need to apply the workaround of using
       dummy patterns.
